fixed issue with login and info behind header

--- a/src/DailyGame/DailyGame.css
+++ b/src/DailyGame/DailyGame.css
@@ -4,53 +4,16 @@ html, body {
     margin: 0;
 }
 
-/* Header */
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 2rem;
-    background-color: #011f1d;
-    color: white;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    width: 100%;
-    box-sizing: border-box;
-    position: fixed;
-    top: 0;
-    z-index: 1000; /* Ensure the header is above other content */
-}
-
-header h1 {
-    margin: 0;
-    font-size: 1.5rem;
-    font-weight: normal;
-}
-
-nav {
-    display: flex;
-}
-
-nav a {
-    margin-right: 20px;
-    text-decoration: none;
-    color: white;
-    padding: 0.5rem 0.75rem;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-nav a:hover, nav a:focus {
-    background-color: rgba(255,255,255,0.2);
-}
 
 /* Footer */
 footer {
+    font-size: larger;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     padding: 1rem 2rem;
-    background-color: #011f1d;
-    color: white;
+    background-color: darkgray;
+    color: black;
     box-shadow: 0 -2px 4px rgba(0,0,0,0.1);
     width: 100%;
     box-sizing: border-box;
@@ -61,8 +24,9 @@ footer {
 
 footer h1 {
     margin: 0;
-    font-size: 1.5rem;
-    font-weight: normal;
+    font-size: 2rem;
+    font-weight: bold;
+    font-family: monospace;
 }
 
 /* Main content area */
